[package]
name = "oxideav-indeo"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-indeo"
authors = ["Mark Karpeles"]
description = "Pure-Rust Intel Indeo video codec family (Indeo 2 / 3 / 4 / 5) for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-indeo"
keywords = ["multimedia", "video", "indeo", "rt21", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"

# Self-contained workspace marker so `cargo test` from inside this crate
# does not walk up into the parent monorepo workspace (which currently
# contains other crates that also declare their own [workspace] block,
# causing cargo to error out with "multiple workspace roots"). The
# crate ships standalone via crates.io and is built standalone in CI;
# this empty workspace keeps in-tree test runs equally hermetic.
[workspace]
